--- a/style.css
+++ b/style.css
@@ -2,12 +2,40 @@ body{
     background-color: #000;
 }
 
-
-#canvas {
+.container {
+    display: flex;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    margin-top: 80px;
+    background-color: #000;
     border: 1px solid #fff;
-    display: block;
-    margin: 0 auto;
-    margin-top: 60px;
+}
+.canvas, .hourglass {
+    width: 100%;
+    height: auto;
+    max-width: 400px;
+    max-height: 600px;
+}
+
+.hourglass {
+    position: absolute;
+    width: 200px;
+    height: 400px;
+    background-color: #000;
+    /* margin: 50px auto; */
+    mask-image: url(#hourglassMask);
+    -webkit-mask-image: url(#hourglassMask);
+    mask-size: 100% 100%;
+    -webkit-mask-size: 100% 100%;
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
+    mask-position: center;
+    -webkit-mask-position: center;
 }
 
 .formContainer{
@@ -17,5 +45,6 @@ body{
     position: absolute;
     top: 0;
     /* left: 50%; */
+    
 
 }
